[project]
name = "grnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikeras>=0.13.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "tensorboard>=2.20.0",
    "tensorflow>=2.21.0",
]
